2008-06-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade):
	Draw only half around the corners.

2008-05-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Changes menuitem separator height from 5 to 7

2008-05-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	2.15.1 release.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button), (clearlooks_draw_tab),
	(clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider),
	(clearlooks_register_style_classic):
	Fixed tab stripe and different shadings from the original clearlooks.
	I think maybe they look better (smoother).

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_selected_cell):
	Removed top & bottom borders.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button):
	Changed look of default, get rid of the ugly rectangle.
	Maybe I should add a little shadow.

	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	Changed border for scrolled_window

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_slider):
	This one compiles :)

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button), (clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):
	Use some constants

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_scale_trough), (clearlooks_draw_slider),
	(clearlooks_draw_progressbar_fill):
	Better scale trough.
